# oz-monitor-orchestrator

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  MICROSERVICES_IMPLEMENTATION_CHECKLIST.md  OZ_ARCHITECTURE_ANALYSIS.md  OZ_MONITORING_EXTENSIONS.md  README.md  config.yaml  docker-compose.yml  integration-completion-plan.md  plan.md  run_migration.sh
.sqlx/: query-07800bd7ad661df91080c82e0056e07bb8acd579028eba704ab94c3de4fe1b74.json  query-463523daad2bc31fe83bb80f6a6d661165130eb8b838031a47a08aba8ca3c8cb.json  query-479baac489b0719e195df97c6f294d68b94fadbe684029f5fdde74585113c0ab.json  query-827261742828fea56a515e70a08c903d2b413a7d46673b791bf59a6b5db60cc8.json  query-e786c769d3ea7a79310bf39d60411eb29defe669bb5d5b3992d70c7c03c7c23d.json  query-f193a4c4f5dd024f68e3dbfbda15b9e5044cc44d21f5c46bfe1456f554b6e9bb.json  query-fb42409f08656f6f69780d17aa752f1b5f8c4b671304810b7b95ecac734b8da0.json
docs/: architecture.md  configuration-updates.md  multi-tenant.md  project-structure.md  structure.md
k8s/: hpa.yaml  monitoring.yaml  namespace.yaml  redis-statefulset.yaml  secrets.yaml  shared-block-watcher.yaml  worker-deployment.yaml
scripts/: start.sh  status.sh  test-api.sh  verify.sh
sql/: assign_tenant_to_worker.sql
src/: lib.rs  main.rs
src/config/: api.rs  block_cache.rs  block_watcher.rs  error.rs  load_balancer.rs  mod.rs  orchestrator.rs  service_mode.rs  worker.rs
src/models/: assignment.rs  error.rs  metrics.rs  mod.rs  tenant.rs
src/repositories/: error.rs  mod.rs  tenant.rs
src/services/: block_cache.rs  cached_client_pool.rs  error.rs  load_balancer.rs  mod.rs  oz_monitor_integration.rs  shared_block_watcher.rs  worker_pool.rs
