[package]
name = "oz-monitor-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# OpenZeppelin Monitor (using as library)
# You'll need to adjust this path to your actual OZ monitor location
openzeppelin-monitor = { path = "../openzeppelin-monitor" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros"] }

# Redis for caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUIDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Concurrent data structures
dashmap = "6.1"

# Lazy static initialization
once_cell = "1.20"

# Metrics
prometheus = "0.13"

# Configuration
config = "0.14"
humantime-serde = "1.1"

# Consistent hashing for tenant affinity
maglev = "0.2"

# Priority queue
priority-queue = "2.1"

# Kubernetes client (for dynamic scaling)
kube = { version = "0.97", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["latest"] }

# CLI
clap = { version = "4.5", features = ["derive"] }